core-plugins/src/test/resources/scraper/test/plugins/core/typechecker/ok/flatten2.yf
---
name: contains
graphs:
  start:
    - {type: Echo, put: list, value: ["1","2"]}
    - {type: Echo, put: list2, value: []}
    - type: FlattenList
      flatten: ["{list}", "{list2}", "{list2}"]
      output: "mergedlists"


