core-plugins/src/test/resources/scraper/test/plugins/core/typechecker/fail/contains.yf
---
name: contains
graphs:
  start:
    - {type: Echo, put: list, value: [1,2]}
    - type: ContainedInCollection
      collection: "{list}"
      object: "hello"
      flag: flag

